--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="edit_node">节点编辑</string>
     <string name="add_node">增加节点</string>
     <string name="delete_node">删除节点</string>
+    <string name="delete">删除</string>
     <string name="update_node">修改节点名称</string>
     <string name="please_input_node_name">请输入节点名称</string>
     <string name="node_name_can_not_be_empty">节点名称不能为空!</string>
@@ -158,10 +159,12 @@
     <string name="all">全部工序</string>
     <string name="already_select">已选择人员</string>
     <string name="no_data">未选中任何人员！</string>
+    <string name="no_any_data">已经加载全部数据！</string>
     <string name="commonly">一般</string>
     <string name="serious">严重</string>
     <string name="critical">紧要</string>
     <string name="rectificationPeriod">整改期限：</string>
     <string name="rectificationRequirements">整改要求：</string>
     <string name="noSearchContext">无搜索内容！</string>
+    <string name="add">添加</string>
 </resources>
